--- a/style.css
+++ b/style.css
@@ -29,3 +29,44 @@ span {
   display: none;
   color: white;
 }
+
+/* ----------- */
+
+#modal {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal-bg {
+  background-color: white;
+  width: 22rem;
+  height: 20rem;
+  border-radius: 10px;
+  padding: 10px;
+  position: relative;
+}
+.modal-bg li {
+  list-style-type: none;
+  display: flex;
+}
+.crossBtn {
+  position: absolute;
+  display: flex;
+  justify-content: start;
+  border: 0;
+  right: 10px;
+  cursor: pointer;
+}
+.my-ul b {
+  margin-right: 5px;
+}
+.my-ul {
+  overflow-y: scroll;
+  height: 14rem;
+}
