--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ span {
   text-align: center;
   width: 50%;
 }
+.mybtn {
+  border: 0;
+}
 #spinner {
   display: none;
 }
@@ -107,4 +110,20 @@ span {
 .my-ul {
   overflow-y: scroll;
   height: 14rem;
+}
+
+/* add to cart */
+.addtocart {
+  background-color: aquamarine;
+  width: 30rem;
+  height: 400px;
+  position: absolute;
+  top: 5%;
+  right: 5%;
+  border-radius: 10px;
+  padding: 1rem;
+  overflow: hidden;
+}
+.close {
+  text-align: end;
 }
