--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ span {
 .addtocart {
   background-color: aquamarine;
   width: 30rem;
-  height: 400px;
+  height: auto;
   position: absolute;
   top: 5%;
   right: 5%;
